# flex-registration

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  Procfile  README.md  azure-pipelines.yml  docker-compose.yml  exorcist.py  gunicorn_config.py  manage.py  messages.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.css  tox.ini  trivy.yaml
.github/workflows/: docker.yml  test.yml  trivy.yml
DATA/codemirror5-5.65.12/: .gitignore
DATA/codemirror5-5.65.12/.github/: FUNDING.yml  ISSUE_TEMPLATE.md
DATA/codemirror5-5.65.12/doc/: realworld.html
DATA/codemirror5-5.65.12/mode/asn.1/: index.html
DATA/codemirror5-5.65.12/mode/nsis/: index.html
DATA/codemirror5-5.65.12/mode/ttcn/: index.html
DATA/codemirror5-5.65.12/mode/ttcn-cfg/: index.html  ttcn-cfg.js
DATA/codemirror5-5.65.12/test/: annotatescrollbar.js
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.local  Dockerfile.test  Makefile  circus.conf  entrypoint-local.sh  entrypoint.sh  nginx.conf  uwsgi.ini
docker/conf/: circus.conf  nginx.conf  nginx.conf.tpl  uwsgi.ini
docker/conf/nginx/: 50x.html  error.html  maintainance.html
docs/: PWA.md
src/aurora/: apps.py  checks.py  ddt_panels.py  state.py  stubs.py
src/aurora/admin/: apps.py  mixin.py  panels.py  site.py
src/aurora/administration/: admin.py  apps.py  filters.py  forms.py  hijack.py  mixin.py  panels.py
src/aurora/api/: router.py  urls.py
src/aurora/api/serializers/: __init__.py  base.py  field.py  flatpage.py  form.py  org.py  project.py  record.py  registration.py  template.py  validator.py
src/aurora/api/viewsets/: __init__.py  base.py  counter.py  field.py  flatpage.py  form.py  formset.py  org.py  project.py  record.py  registration.py  sync.py  sys.py  template.py  user.py  validator.py
src/aurora/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/aurora/config/fragments/: __init__.py  ad.py  admin_sync.py  anymail.py  azure_graph_api.py  capcha.py  channels.py  constance.py  cors.py  csp.py  dbtemplate.py  django_toolbar.py  flags.py  front_door.py  json_editor.py  matomo.py  mdeditor.py  rest_framework.py  reversion.py  sentry.py  smart_admin.py  social_auth.py  strategy.py  sysinfo.py  translator.py
src/aurora/core/: admin.py  admin_sync.py  apps.py  authentication.py  backends.py  cache.py  channels.py  compat.py  crypto.py  field_editor.py  flags.py  forms.py  handlers.py  models.py  private_key.py  protocols.py  registry.py  urls.py  utils.py  version_media.py  views.py
src/aurora/core/admin/: __init__.py  base.py  custom_field.py  field_editor.py  filters.py  flex_field.py  flex_form.py  form_editor.py  formset.py  mixin.py  optionset.py  organization.py  project.py  protocols.py  validator.py
src/aurora/core/fields/: __init__.py  captcha.py  compilation_time.py  file.py  hidden.py  mixins.py  multi_checkbox.py  remote_ip.py  select.py
src/aurora/core/migrations/: 0004_auto_20220308_1056.py  0007_auto_20220308_2049.py  0008_auto_20220310_0517.py  0009_auto_20220310_1033.py  0011_flexform_version.py  0012_auto_20220311_0514.py  0014_optionset_version.py  0018_rename_required_formset_min_num.py  0019_alter_formset_unique_together.py  (+29 more)
src/aurora/counters/: admin.py  forms.py  models.py  urls.py  views.py
src/aurora/flatpages/: admin.py  apps.py  forms.py  urls.py  views.py
src/aurora/i18n/: admin.py  apps.py  engine.py  forms.py  gettext.py  handlers.py  models.py  translate.py  urls.py  views.py
src/aurora/publish/: mixin.py  perms.py  utils.py
src/aurora/registration/: admin.py  apps.py  debug.py  forms.py  models.py  paginator.py  protocol.py  storage.py  strategies.py  urls.py
src/aurora/security/: ad.py  admin.py  apps.py  backend.py  forms.py  handlers.py  microsoft_graph.py  models.py  utils.py  views.py
src/aurora/web/: apps.py  context_processors.py  storage.py  urls.py
src/dbtemplates/: __init__.py  admin.py  apps.py  conf.py  loader.py  models.py  test_cases.py  test_settings.py
src/dbtemplates/migrations/: 0001_initial.py  0002_alter_template_name.py  0003_template_active.py
src/dbtemplates/utils/: cache.py  template.py
src/django_smart_register.egg-info/: PKG-INFO  SOURCES.txt
src/smart_register/: __init__.py  apps.py  ddt_panel.py  ddt_panels.py  state.py
src/smart_register/admin/: apps.py  forms.py  mixin.py  panels.py  site.py
src/smart_register/api/: field.py  form.py  formset.py  registration.py  serializers.py  urls.py  validator.py  views.py
src/smart_register/auth/: admin.py  models.py
src/smart_register/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/smart_register/core/: admin.py  apps.py  authentication.py  backends.py  cache.py  compat.py  crypto.py  flags.py  forms.py  handlers.py  i18n.py  models.py  registry.py  serializers.py  urls.py  utils.py  views.py  widgets.py
src/smart_register/counters/: admin.py  forms.py  models.py
src/smart_register/i18n/: admin.py  apps.py  cache.py  context_processors.py  engine.py  fields.py  forms.py  gettext.py  google.py  models.py  urls.py  views.py
src/smart_register/publish/: forms.py  mixin.py  utils.py
src/smart_register/registration/: admin.py  apps.py  debug.py  fields.py  forms.py  models.py  storage.py  urls.py
src/smart_register/security/: admin.py  apps.py  models.py
src/smart_register/staticfiles/: admin_extra_buttons.css.map  admin_extra_buttons.min.js  admin_extra_buttons.scss  base.scss
src/smart_register/web/: apps.py  context_processors.py  middlewares.py  urls.py
tests/: .coveragerc  conftest.py  test_admin.py  test_api.py  test_crypt.py  test_custom.py  test_form.py  test_i18n.py  test_json.py  test_optionset.py  test_panels.py  test_publish.py  test_rest.py  test_security.py  test_sync.py  test_utils.py  test_validators.py  test_views.py  test_wsgi.py
tests/browser/: conftest.py  fixtures.json  test_f_register.py
tests/extras/testutils/: factories.py  perms.py  selenium.py  utils.py
tests/fields/: test_captcha.py  test_select_field.py  test_yesno_field.py
(+719 files in other folders)
