[tool.poetry]
name = "aurora"
version = "0.3.0"
description = ""
authors = ["sax <s.apostolico@gmail.com>"]
packages = [
    { include = "aurora", from = "src" },
]

[tool.poetry.dependencies]
Faker = "^19.0.0"
Markdown = "^3.3.6"
Pillow = "^10"
beautifulsoup4 = "^4.12.0"
celery = "^5.2.6"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"
cryptography = "*"
django = "^4"
django-admin-extra-buttons = "^1.5"
django-admin-ordering = "*"
django-admin-sync = "^0.7"
django-adminactions = "^2"
django-adminfilters = "^2"
django-appconf = "^1.0.5"
django-bitfield = "^2.1"
django-click = "^2.3"
django-concurrency = "^2.4"
django-constance = "^3.0"
django-cors-headers = "^4"
django-csp = "^3.7"
django-debug-toolbar = "^4"
django-environ = "^0.11"
django-filter = "^23"
django-flags = "^5"
django-front-door = "^0.10.0"
django-hijack = "^3.2.6"
django-import-export = "*"
django-jsoneditor = "^0.2"
django-mdeditor = "^0.1.20"
django-mptt = "^0.15"
django-picklefield = "^3.0"
django-pwa = "^1.0.10"
django-redis = "^5.2.0"
django-regex = "*"
django-reversion = "^5.0"
django-reversion-compare = "^0.16"
django-simple-captcha = "^0.5.17"
django-simple-math-captcha = "^2"
django-smart-admin = "^2"
django-strategy-field = "^3"
django-sysinfo = "^2"
django-tinymce = "^3.5.0"
djangorestframework = "^3"
djangorestframework-datatables = "^0.7.0"
htmlmin = "^0.1"
jmespath = "^1.0"
jsonpickle="^3"
natural-keys = "^2.0.0"
psycopg2-binary = "^2.9.3"
py-mini-racer = "^0.6.0"
pycryptodome = "^3.14.1"
pygments = "^2.14.0"
python = "^3.9"
pyquery = "^2.0.0"
qrcode = "^7.3.1"
sentry-sdk = "^1.5"
setuptools = "*"
social-auth-app-django = "^5.0.0"
soupsieve = "^2.4"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
black = "^23"
coverage = "*"
django-stubs = {extras = ["compatible-mypy"], version = "^4"}
django-webtest = "^1.9.7"
factory_boy = "*"
flake8 = "*"
freezegun = "^1.2.2"
ipython = "*"
isort = "^5.6.4"
pdbpp = "*"
pre-commit = "*"
py = "*"
pyflakes = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-coverage = "^0.0"
pytest-django = "^4.1.0"
pytest-echo = "*"
pytest-pythonpath = "^0.7"
pytest-selenium = "^4.0"
tox = "*"
watchdog = "^3"

[build-system]
requires = ["poetry-core>=1.1.4"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
)/
'''
